# mozanta-python-training-project

./: README.md  pyproject.toml
blogs/blog_posts/: apps.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
blogs/blog_posts/migrations/: 0001_initial.py  0002_initial.py
blogs/blog_posts/template/posts/: home.html
blogs/blogs/: asgi.py  settings.py  urls.py  wsgi.py
blogs/users/: forms.py  managers.py  models.py  serializers.py  urls.py  views.py
blogs/users/migrations/: 0001_initial.py
blogs/users/templates/users/: index.html
web_application/: manage.py
web_application/application/: managers.py  models.py  serializers.py  urls.py  utils.py  views.py
web_application/application/migrations/: 0001_initial.py
web_application/web_application/: asgi.py  settings.py  urls.py  wsgi.py
