[tool.poetry]
name = "mozanta-python-training-project"
version = "0.1.0"
description = ""
authors = ["aparna <aparna.babu@mozanta.com>"]
readme = "README.md"
packages = [{include = "mozanta-python-training-project"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.5"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.7"
djangorestframework-jwt = "^1.11.0"
coreapi = "^2.3.3"
rest-framework-simplejwt = "^0.0.2"
loguru = "^0.7.2"
djangorestframework-simplejwt = "^5.3.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
